data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_437.wast
;; 8. **Test Description**: Implement a loop where a branch outside the loop re-enters at an invalid point, overcoming stack unwinding steps and encountering an `unreachable`.    - **Constraint**: Assures correct stack unwinding behavior, specifically in the handling of back-jumps and branches.    - **Unreachable Code Execution**: Incorrect stack unwinding brings execution to `unreachable` unexpectedly.

(assert_invalid
  (module
    (func $invalid-back-jump (result i32)
      i32.const 1
      loop (result i32)
        br 1
      end
      unreachable
    )
  )
  "type mismatch"
)